fix: add version query parameter to force browser cache invalidation

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./asset-index-final-1770092681544.js?v=2.0.2"></script>
   </body>
 </html>
