fix: add cache busting parameter to force browser reload

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./asset-index-final-1770092681544.js?v=2.0.2"></script>
+    <script type="module" src="./asset-index-final-1770092681544.js?bust=1770092800000"></script>
   </body>
 </html>
