--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NUCash - Cashless Transaction System</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./asset-index-final-1770092681544.js?bust=1770092800000"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
